<resources>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_cif">CIF</string>
    <string name="pref_video_quality_entry_qvga">QVGA</string>
    <string name="pref_video_quality_entry_qcif">QCIF</string>
    <string name="pref_camera_powermode_title">Power Mode</string>
    <string name="pref_camera_powermode_entry_lp">Low_Power</string>
    <string name="pref_camera_powermode_entry_np">Normal_Power</string>
    <string name="pref_camera_powermode_value_lp">Low_Power</string>
    <string name="pref_camera_powermode_value_np">Normal_Power</string>
    <string name="pref_camera_powermode_default">Normal_Power</string>
    <string name="pref_camera_autoexposure_default">center-weighted</string>
    <string name="pref_camera_autoexposure_title">Select Auto Exposure Mode</string>
    <string name="pref_camera_autoexposure_entry_frameaverage">Frame Average</string>
    <string name="pref_camera_autoexposure_entry_centerweighted">Center Weighted</string>
    <string name="pref_camera_autoexposure_entry_spotmetering">Spot Metering</string>
    <string name="pref_camera_autoexposure_value_frameaverage">frame-average</string>
    <string name="pref_camera_autoexposure_value_centerweighted">center-weighted</string>
    <string name="pref_camera_autoexposure_value_spotmetering">spot-metering</string>
    <string name="pref_camera_videoencoder_title">Video Encoder</string>
    <string name="pref_camera_videoencoder_entry_0">MPEG4</string>
    <string name="pref_camera_videoencoder_entry_1">H263</string>
    <string name="pref_camera_videoencoder_entry_2">H264</string>
    <string name="pref_camera_videoencoder_entry_3">H265</string>
    <string name="pref_camera_videoencoder_default">h264</string>
    <string name="pref_camera_videoencoder_dialogtitle">Video Encoder</string>
    <string name="pref_camera_audioencoder_default">aac</string>
    <string name="pref_camera_audioencoder_title">Audio Encoder</string>
    <string name="pref_camera_audioencoder_entry_0">AMRNB</string>
    <string name="pref_camera_audioencoder_entry_1">AAC</string>
    <string name="pref_camera_video_duration_default">10</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
    <string name="pref_camera_video_duration_entry_mms">30 seconds(MMS)</string>
    <string name="pref_camera_video_duration_entry_10">10 minutes</string>
    <string name="pref_camera_video_duration_entry_30">30 minutes</string>
    <string name="pref_camera_video_duration_entry_nolimit">no limit</string>
    <string name="pref_camera_skinToneEnhancement_default">disable</string>
    <string name="pref_camera_skinToneEnhancement_title">Skin Tone Enhancement</string>
    <string name="pref_camera_skinToneEnhancement_entry_enable">Enable</string>
    <string name="pref_camera_skinToneEnhancement_entry_disable">Disable</string>
    <string name="pref_camera_skinToneEnhancement_value_enable">enable</string>
    <string name="pref_camera_skinToneEnhancement_value_disable">disable</string>
    <string name="pref_camera_zsl_title">ZSL</string>
    <string name="pref_camera_zsl_default">on</string>
    <string name="pref_camera_selectablezoneaf_default">auto</string>
    <string name="pref_camera_selectablezoneaf_title">Selectable Zone Auto Focus</string>
    <string name="pref_camera_selectablezoneaf_entry_auto">Auto</string>
    <string name="pref_camera_selectablezoneaf_entry_spotmetering">Spot Metering</string>
    <string name="pref_camera_selectablezoneaf_entry_centerweighted">Center Weighted</string>
    <string name="pref_camera_selectablezoneaf_entry_frameaverage">Frame Average</string>
    <string name="pref_camera_selectablezoneaf_value_auto">auto</string>
    <string name="pref_camera_selectablezoneaf_value_spotmetering">spot-metering</string>
    <string name="pref_camera_selectablezoneaf_value_centerweighted">center-weighted</string>
    <string name="pref_camera_selectablezoneaf_value_frameaverage">frame-average</string>
    <string name="pref_camera_advanced_feature_default">none</string>
    <string name="pref_camera_advanced_features_title">Advanced Features</string>
    <string name="pref_camera_advanced_feature_entry_none">None</string>
    <string name="pref_camera_advanced_feature_entry_ubifocus">Ubi Focus</string>
    <string name="pref_camera_advanced_feature_entry_refocus">Refocus</string>
    <string name="pref_camera_advanced_feature_entry_chromaflash">Chroma Flash</string>
    <string name="pref_camera_advanced_feature_entry_optizoom">Opti Zoom</string>
    <string name="pref_camera_advanced_feature_entry_FSSR">FSSR</string>
    <string name="pref_camera_advanced_feature_entry_trueportrait">True Portrait</string>
    <string name="pref_camera_advanced_feature_entry_multi_touch_focus">Multi-touch Focus</string>
    <string name="pref_camera_advanced_feature_entry_stillmore">Still More</string>
    <string name="pref_camera_advanced_feature_value_none">none</string>
    <string name="pref_camera_advanced_feature_value_ubifocus_on">af-bracket-on</string>
    <string name="pref_camera_advanced_feature_value_refocus_on">re-focus-on</string>
    <string name="pref_camera_feature_pro">pro-values</string>
    <string name="pref_camera_scenemode_entry_pro">Pro</string>
    <string name="pref_camera_feature_pro_on">on</string>
    <string name="pref_camera_advanced_feature_value_chromaflash_on">chroma-flash-on</string>
    <string name="pref_camera_advanced_feature_value_chromaflash_off">chroma-flash-off</string>
    <string name="pref_camera_manual_exp_title">Manual Exposure</string>
    <string name="pref_camera_manual_exp_default">off</string>
    <string name="pref_camera_manual_wb_title">Manual White balance</string>
    <string name="pref_camera_manual_wb_default">off</string>
    <string name="pref_camera_manual_focus_title">Manual Focus</string>
    <string name="pref_camera_manual_focus_default">off</string>
    <string name="pref_camera_instant_capture_title">Instant Capture</string>
    <string name="pref_camera_instant_capture_default">0</string>
    <string name="pref_camera_cds_entry_off">Off</string>
    <string name="pref_camera_cds_title">CDS mode</string>
    <string name="pref_camera_tnr_title">TNR mode</string>
    <string name="pref_camera_tnr_default">off</string>
    <string name="pref_camera_facedetection_default">on</string>
    <string name="pref_camera_facedetection_title">Face Detection</string>
    <string name="pref_selfie_flash_default">off</string>
    <string name="pref_selfie_flash_title">Selfie Flash</string>
    <string name="pref_camera_redeyereduction_default">disable</string>
    <string name="pref_camera_redeyereduction_title">Redeye Reduction</string>
    <string name="pref_camera_selfiemirror_default">disable</string>
    <string name="pref_camera_selfiemirror_title">Selfie Mirror</string>
    <string name="pref_camera_shuttersound_default">enable</string>
    <string name="pref_camera_shuttersound_title">Shutter Sound</string>
    <string name="pref_camera_ae_bracket_hdr_title">AE-Bracket</string>
    <string name="pref_camera_ae_bracket_hdr_default">Off</string>
    <string name="pref_camera_denoise_title">Wavelet Denoise Mode</string>
    <string name="pref_camera_denoise_default">denoise-on</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_antibanding_title">Anti Banding</string>
    <string name="pref_camera_antibanding_default">auto</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Color effect Level</string>
    <string name="pref_camera_filter_mode_title">Color effect Mode</string>
    <string name="pref_camera_touchafaec_default">touch-on</string>
    <string name="pref_camera_touchafaec_title">Touch AF/AEC</string>
    <string name="pref_camera_facerc_title">Face Recognition</string>
    <string name="pref_camera_facerc_default">off</string>
    <string name="pref_camera_sharpness_default">2</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_contrast_default">5</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_default">5</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_jpegquality_default">95</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_picture_format_title">Select Picture Format</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_histogram_default">disable</string>
    <string name="pref_camera_histogram_title">Histogram</string>
    <string name="pref_camera_scenedetect_default">off</string>
    <string name="pref_camera_scenedetect_title">Auto Scene Detection</string>
    <string name="pref_camera_longshot_default">on</string>
    <string name="pref_camera_longshot_title">Continuous Shot</string>
    <string name="pref_camera_auto_hdr_title">AUTO HDR</string>
    <string name="pref_camera_auto_hdr_default">disable</string>
    <string name="pref_camera_hdr_mode_default">hdr-mode-multiframe</string>
    <string name="pref_camera_hdr_mode_title">HDR Mode</string>
    <string name="pref_camera_hdr_need_1x_default">@string/pref_hdr_need_1x_value_false</string>
    <string name="pref_camera_hdr_need_1x_title">HDR need 1x frame</string>
    <string name="pref_camera_tsmakeup_title">Beautification</string>
    <string name="pref_camera_tsmakeup_default">Off</string>
    <string name="pref_camera_tsmakeup_level_default">70</string>
    <string name="pref_camera2_camera2_title">Camera2 Mode</string>
    <string name="pref_camera_bokeh_mode_default">0</string>
    <string name="pref_camera_bokeh_mode_title">Bokeh Mode</string>
    <string name="pref_camera_bokeh_mpo_default">0</string>
    <string name="pref_camera_bokeh_mpo_title">Bokeh Mode MPO</string>
    <string name="pref_camera_bokeh_blur_degree_default">100</string>
    <string name="pref_camera_bokeh_blur_degree_title">Bokeh Blur Value</string>
    <string name="pref_camera_zoom_default">0</string>
    <string name="pref_camera_zoom_title">Zoom</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">GPS location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default">0</string>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="setting_off_value">off</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_hdr_plus">HDR+</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="pref_camera_hdr_plus_default">@string/setting_off_value</string>
</resources>