<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/org.codeaurora.snapcam">
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:labelList="@array/pref_camera_flashmode_labels" camera:icons="@array/camera_flashmode_icons" camera:singleIcon="@drawable/ic_settings_flash" camera:largeIcons="@array/camera_flashmode_largeicons" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:entryValues="@array/pref_camera_exposure_array_value" camera:entries="@array/pref_camera_exposure_array" camera:singleIcon="@drawable/ic_settings_exposure" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:singleIcon="@drawable/ic_settings_scenemode" camera:thumbnails="@array/scenemode_thumbnails" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_promode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:singleIcon="@drawable/ic_pro" camera:thumbnails="@array/proswitcher_thumbnails" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:labelList="@array/pref_camera_whitebalance_labels" camera:icons="@array/whitebalance_icons" camera:singleIcon="@drawable/ic_settings_lightsource" camera:largeIcons="@array/whitebalance_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_advanced_feature_entry_chromaflash" camera:key="chroma-flash" camera:defaultValue="@string/pref_camera_advanced_feature_value_chromaflash_off" camera:entryValues="@array/pref_camera_chromaflash_entryvalues" camera:entries="@array/pref_camera_chromaflash_entries" camera:singleIcon="@drawable/ic_settings_chromaflash" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:labelList="@array/pref_camera_recordlocation_labels" camera:icons="@array/camera_recordlocation_icons" camera:singleIcon="@drawable/ic_settings_location" camera:largeIcons="@array/camera_recordlocation_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" camera:singleIcon="@drawable/ic_settings_picturesize" />
    <IconListPreference camera:title="@string/pref_camera_focusmode_title" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" camera:labelList="@array/pref_camera_focusmode_labels" camera:singleIcon="@drawable/ic_settings_focus" />
    <ListPreference camera:title="@string/pref_camera_ae_bracket_hdr_title" camera:key="pref_camera_ae_bracket_hdr_key" camera:defaultValue="@string/pref_camera_ae_bracket_hdr_default" camera:entryValues="@array/pref_camera_ae_bracket_hdr_entryvalues" camera:entries="@array/pref_camera_ae_bracket_hdr_entries" />
    <ListPreference camera:title="@string/pref_camera_cds_title" camera:key="pref_camera_cds_mode_key" camera:defaultValue="@string/pref_camera_cds_entry_off" camera:entryValues="@array/pref_camera_cds_entryvalues" camera:entries="@array/pref_camera_cds_entries" />
    <ListPreference camera:title="@string/pref_camera_tnr_title" camera:key="pref_camera_tnr_mode_key" camera:defaultValue="@string/pref_camera_tnr_default" camera:entryValues="@array/pref_camera_tnr_entryvalues" camera:entries="@array/pref_camera_tnr_entries" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:labelList="@array/camera_id_labels" camera:icons="@array/camera_id_icons" camera:largeIcons="@array/camera_id_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_entry_hdr" camera:key="pref_camera_hdr_key" camera:defaultValue="@string/pref_camera_hdr_default" camera:entryValues="@array/pref_camera_hdr_entryvalues" camera:entries="@array/pref_camera_hdr_entries" camera:labelList="@array/pref_camera_hdr_labels" camera:icons="@array/pref_camera_hdr_icons" camera:largeIcons="@array/pref_camera_hdr_icons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_entry_hdr_plus" camera:key="pref_camera_hdr_plus_key" camera:defaultValue="@string/pref_camera_hdr_plus_default" camera:entryValues="@array/pref_camera_hdr_plus_entryvalues" camera:entries="@array/pref_camera_hdr_plus_entries" camera:labelList="@array/pref_camera_hdr_plus_labels" camera:icons="@array/pref_camera_hdr_plus_icons" camera:largeIcons="@array/pref_camera_hdr_plus_icons" />
    <CountDownTimerPreference camera:title="@string/pref_camera_timer_title" camera:key="pref_camera_timer_key" camera:defaultValue="@string/pref_camera_timer_default" camera:singleIcon="@drawable/ic_settings_countdowntimer" />
    <ListPreference camera:title="@string/pref_camera_timer_sound_title" camera:key="pref_camera_timer_sound_key" camera:defaultValue="@string/pref_camera_timer_sound_default" camera:entryValues="@array/pref_camera_timer_sound_entryvalues" camera:entries="@array/pref_camera_timer_sound_entries" />
    <ListPreference camera:title="@string/pref_camera_scenedetect_title" camera:key="pref_camera_scenedetect_key" camera:defaultValue="@string/pref_camera_scenedetect_default" camera:entryValues="@array/pref_camera_scenedetect_entryvalues" camera:entries="@array/pref_camera_scenedetect_entries" />
    <ListPreference camera:title="@string/pref_camera_facerc_title" camera:key="pref_camera_facerc_key" camera:defaultValue="@string/pref_camera_facerc_default" camera:entryValues="@array/pref_camera_facerc_entryvalues" camera:entries="@array/pref_camera_facerc_entries" />
    <IconListPreference camera:title="@string/pref_camera_filter_mode_title" camera:key="pref_camera_filter_mode_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_filter_mode_entryvalues" camera:entries="@array/pref_camera_filter_mode_entries" camera:icons="@array/pref_filter_mode_icons" camera:singleIcon="@drawable/ic_settings_filter" camera:largeIcons="@array/pref_filter_mode_icons" />
    <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" camera:singleIcon="@drawable/ic_settings_filter" camera:thumbnails="@array/coloreffect_thumbnails" />
    <IconListPreference camera:title="@string/pref_camera_jpegquality_title" camera:key="pref_camera_jpegquality_key" camera:defaultValue="@string/pref_camera_jpegquality_default" camera:entryValues="@array/pref_camera_jpegquality_entryvalues" camera:entries="@array/pref_camera_jpegquality_entries" camera:singleIcon="@drawable/ic_settings_quality" />
    <ListPreference camera:title="@string/pref_camera_touchafaec_title" camera:key="pref_camera_touchafaec_key" camera:defaultValue="@string/pref_camera_touchafaec_default" camera:entryValues="@array/pref_camera_touchafaec_entryvalues" camera:entries="@array/pref_camera_touchafaec_entries" />
    <IconListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" camera:singleIcon="@drawable/ic_settings_iso" />
    <ListPreference camera:title="@string/pref_camera_histogram_title" camera:key="pref_camera_histogram_key" camera:defaultValue="@string/pref_camera_histogram_default" camera:entryValues="@array/pref_camera_histogram_entryvalues" camera:entries="@array/pref_camera_histogram_entries" />
    <IconListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" camera:singleIcon="@drawable/ic_wb_incandescent" />
    <ListPreference camera:title="@string/pref_camera_picture_format_title" camera:key="pref_camera_pictureformat_key" camera:defaultValue="@string/pref_camera_picture_format_default" camera:entryValues="@array/pref_camera_picture_format_entryvalues" camera:entries="@array/pref_camera_picture_format_entries" />
    <ListPreference camera:title="@string/pref_camera_sharpness_title" camera:key="pref_camera_sharpness_key" camera:defaultValue="@string/pref_camera_sharpness_default" camera:entryValues="@array/pref_camera_multilevel_sharpness_entryvalues" camera:entries="@array/pref_camera_sharpness_entries" />
    <ListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_contrast_entries" />
    <ListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_saturation_entries" />
    <ListPreference camera:title="@string/pref_camera_denoise_title" camera:key="pref_camera_denoise_key" camera:defaultValue="@string/pref_camera_denoise_default" camera:entryValues="@array/pref_camera_denoise_entryvalues" camera:entries="@array/pref_camera_denoise_entries" />
    <ListPreference camera:title="@string/pref_camera_autoexposure_title" camera:key="pref_camera_autoexposure_key" camera:defaultValue="@string/pref_camera_autoexposure_default" camera:entryValues="@array/pref_camera_autoexposure_entryvalues" camera:entries="@array/pref_camera_autoexposure_entries" />
    <ListPreference camera:title="@string/pref_camera_skinToneEnhancement_title" camera:key="pref_camera_skinToneEnhancement_key" camera:defaultValue="@string/pref_camera_skinToneEnhancement_default" camera:entryValues="@array/pref_camera_skinToneEnhancement_entryvalues" camera:entries="@array/pref_camera_skinToneEnhancement_entries" />
    <IconListPreference camera:title="@string/pref_selfie_flash_title" camera:key="pref_selfie_flash_key" camera:defaultValue="@string/pref_selfie_flash_default" camera:entryValues="@array/pref_selfie_flash_entryvalues" camera:entries="@array/pref_selfie_flash_entries" camera:singleIcon="@drawable/ic_settings_flash" />
    <IconListPreference camera:title="@string/pref_camera_facedetection_title" camera:key="pref_camera_facedetection_key" camera:defaultValue="@string/pref_camera_facedetection_default" camera:entryValues="@array/pref_camera_facedetection_entryvalues" camera:entries="@array/pref_camera_facedetection_entries" camera:singleIcon="@drawable/ic_settings_facerec" />
    <IconListPreference camera:title="@string/pref_camera_tsmakeup_title" camera:key="pref_camera_tsmakeup_key" camera:defaultValue="@string/pref_camera_tsmakeup_default" camera:entryValues="@array/pref_camera_tsmakeup_entryvalues" camera:entries="@array/pref_camera_tsmakeup_entries" camera:icons="@array/pref_ts_makeup_icons" camera:singleIcon="@drawable/ic_ts_makeup_off" camera:largeIcons="@array/pref_ts_makeup_icons" />
    <IconListPreference camera:title="@string/pref_camera_tsmakeup_title" camera:key="pref_camera_tsmakeup_level_key" camera:defaultValue="@string/pref_camera_tsmakeup_default" camera:entryValues="@array/pref_camera_tsmakeup_level_entryvalues" camera:entries="@array/pref_camera_tsmakeup_level_entries" camera:singleIcon="@drawable/ic_ts_makeup_off" camera:thumbnails="@array/tsmakeup_level_thumbnails" />
    <ListPreference camera:title="@string/pref_camera_tsmakeup_title" camera:key="pref_camera_tsmakeup_whiten" camera:defaultValue="@string/pref_camera_tsmakeup_level_default" />
    <ListPreference camera:title="@string/pref_camera_tsmakeup_title" camera:key="pref_camera_tsmakeup_clean" camera:defaultValue="@string/pref_camera_tsmakeup_level_default" />
    <IconListPreference camera:title="@string/pref_camera_redeyereduction_title" camera:key="pref_camera_redeyereduction_key" camera:defaultValue="@string/pref_camera_redeyereduction_default" camera:entryValues="@array/pref_camera_redeyereduction_entryvalues" camera:entries="@array/pref_camera_redeyereduction_entries" camera:singleIcon="@drawable/ic_settings_redeye" />
    <IconListPreference camera:title="@string/pref_camera_selfiemirror_title" camera:key="pref_camera_selfiemirror_key" camera:defaultValue="@string/pref_camera_selfiemirror_default" camera:entryValues="@array/pref_camera_selfiemirror_entryvalues" camera:entries="@array/pref_camera_selfiemirror_entries" camera:singleIcon="@drawable/ic_settings_selfiemirror" />
    <IconListPreference camera:title="@string/pref_camera_shuttersound_title" camera:key="pref_camera_shuttersound_key" camera:defaultValue="@string/pref_camera_shuttersound_default" camera:entryValues="@array/pref_camera_shuttersound_entryvalues" camera:entries="@array/pref_camera_shuttersound_entries" camera:singleIcon="@drawable/ic_settings_shuttersound" />
    <ListPreference camera:title="@string/pref_camera_selectablezoneaf_title" camera:key="pref_camera_selectablezoneaf_key" camera:defaultValue="@string/pref_camera_selectablezoneaf_default" camera:entryValues="@array/pref_camera_selectablezoneaf_entryvalues" camera:entries="@array/pref_camera_selectablezoneaf_entries" />
    <ListPreference camera:title="@string/pref_camera_zsl_title" camera:key="pref_camera_zsl_key" camera:defaultValue="@string/pref_camera_zsl_default" camera:entryValues="@array/pref_camera_zsl_entryvalues" camera:entries="@array/pref_camera_zsl_entries" />
    <ListPreference camera:title="@string/pref_camera_advanced_features_title" camera:key="pref_camera_advanced_features_key" camera:defaultValue="@string/pref_camera_advanced_feature_default" camera:entryValues="@array/pref_camera_advanced_features_entryvalues" camera:entries="@array/pref_camera_advanced_features_entries" />
    <IconListPreference camera:title="@string/pref_camera_longshot_title" camera:key="pref_camera_longshot_key" camera:defaultValue="@string/pref_camera_longshot_default" camera:entryValues="@array/pref_camera_longshot_entryvalues" camera:entries="@array/pref_camera_longshot_entries" camera:singleIcon="@drawable/ic_settings_continuous" />
    <ListPreference camera:title="@string/pref_camera_auto_hdr_title" camera:key="pref_camera_auto_hdr_key" camera:defaultValue="@string/pref_camera_auto_hdr_default" camera:entryValues="@array/pref_camera_auto_hdr_entryvalues" camera:entries="@array/pref_camera_auto_hdr_entries" />
    <ListPreference camera:title="@string/pref_camera_hdr_mode_title" camera:key="pref_camera_hdr_mode_key" camera:defaultValue="@string/pref_camera_hdr_mode_default" camera:entryValues="@array/pref_camera_hdr_mode_entryvalues" camera:entries="@array/pref_camera_hdr_mode_entries" />
    <ListPreference camera:title="@string/pref_camera_hdr_need_1x_title" camera:key="pref_camera_hdr_need_1x_key" camera:defaultValue="@string/pref_camera_hdr_need_1x_default" camera:entryValues="@array/pref_camera_hdr_need_1x_entryvalues" camera:entries="@array/pref_camera_hdr_need_1x_entries" />
    <ListPreference camera:title="@string/pref_camera_manual_exp_title" camera:key="pref_camera_manual_exp_key" camera:defaultValue="@string/pref_camera_manual_exp_default" camera:entryValues="@array/pref_camera_manual_exp_entry_values" camera:entries="@array/pref_camera_manual_exp_entries" />
    <ListPreference camera:title="@string/pref_camera_manual_wb_title" camera:key="pref_camera_manual_wb_key" camera:defaultValue="@string/pref_camera_manual_wb_default" camera:entryValues="@array/pref_camera_manual_wb_entry_values" camera:entries="@array/pref_camera_manual_wb_entries" />
    <ListPreference camera:title="@string/pref_camera_manual_focus_title" camera:key="pref_camera_manual_focus_key" camera:defaultValue="@string/pref_camera_manual_focus_default" camera:entryValues="@array/pref_camera_manual_focus_entry_values" camera:entries="@array/pref_camera_manual_focus_entries" />
    <ListPreference camera:title="@string/pref_camera_instant_capture_title" camera:key="pref_camera_instant_capture_key" camera:defaultValue="@string/pref_camera_instant_capture_default" camera:entryValues="@array/pref_camera_instant_capture_entry_values" camera:entries="@array/pref_camera_instant_capture_entries" />
    <IconListPreference camera:title="@string/pref_camera_bokeh_mode_title" camera:key="pref_camera_bokeh_mode_key" camera:defaultValue="@string/pref_camera_bokeh_mode_default" camera:entryValues="@array/pref_camera_bokeh_mode_entry_values" camera:entries="@array/pref_camera_bokeh_mode_entries" camera:icons="@array/pref_camera_bokeh_icons" camera:largeIcons="@array/pref_camera_bokeh_icons" />
    <ListPreference camera:title="@string/pref_camera_bokeh_mpo_title" camera:key="pref_camera_bokeh_mpo_key" camera:defaultValue="@string/pref_camera_bokeh_mpo_default" camera:entryValues="@array/pref_camera_bokeh_mpo_entry_values" camera:entries="@array/pref_camera_bokeh_mpo_entries" />
    <ListPreference camera:title="@string/pref_camera_bokeh_blur_degree_title" camera:key="pref_camera_bokeh_blur_degree_key" camera:defaultValue="@string/pref_camera_bokeh_blur_degree_default" />
    <IconListPreference camera:title="@string/pref_camera_bokeh_mode_title" camera:key="pref_asus_single_bokeh_mode_key" camera:defaultValue="@string/pref_camera_bokeh_mode_default" camera:entryValues="@array/pref_camera_bokeh_mode_entry_values" camera:entries="@array/pref_camera_bokeh_mode_entries" camera:icons="@array/pref_camera_bokeh_icons" camera:largeIcons="@array/pref_camera_bokeh_icons" />
    <ListPreference camera:title="@string/pref_camera_bokeh_blur_degree_title" camera:key="pref_asus_single_bokeh_blur_degree_key" camera:defaultValue="@string/pref_camera_bokeh_blur_degree_default" />
    <ListPreference camera:title="@string/pref_camera2_camera2_title" camera:key="pref_camera2_camera2_key" camera:defaultValue="@string/setting_off_value" camera:entryValues="@array/pref_camera2_camera2_entryvalues" camera:entries="@array/pref_camera2_camera2_entries" />
    <ListPreference camera:title="@string/pref_camera_zoom_title" camera:key="pref_camera_zoom_key" camera:defaultValue="@string/pref_camera_zoom_default" camera:entryValues="@array/pref_camera_zoom_entryvalues" camera:entries="@array/pref_camera_zoom_entries" />
</PreferenceGroup>